Get download partly working - initial POST works but gets a 404 on the GET

--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -241,6 +241,10 @@ div.icon16-question-hover {
 	background-position: -192px 0;
 }
 
+div.icon16-download {
+	background-position: -208px 0;
+}
+
 div.icon14x17 {
 	width: 14px;
 	height: 17px;
