--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -246,9 +246,11 @@
 						
 						<form class="input-form" id="forestview-input-form">
 							
-							<div class="float-right">
+							<div style="text-align:right; margin-bottom:12px;">
 								<button class="submit icon-button map-only" type="submit" id="view-forestview-view"><div class="inline-block sprite icon16 icon16-arrow-circle"></div>&nbsp;View</button>
 								<button class="submit icon-button stats-only" type="submit" id="view-forestview-add"><div class="inline-block sprite icon16 icon16-plus"></div>&nbsp;Calculate</button>
+								&nbsp;
+								<button class="icon-button" id="view-forestview-download"><div class="inline-block sprite icon16 icon16-download"></div>&nbsp;Download</button>
 							</div>
 							
 							<div style="margin-bottom:16px;">
