Open CLASlite website in new window

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -99,7 +99,7 @@
 					<div id="site-links">
 						<b>CLASlite</b>
 						<span class="pipe">|</span>
-						<a href="http://claslite.ciw.edu/en/">Website</a>
+						<a target="_blank" href="http://claslite.ciw.edu/en/">Website</a>
 	<!--
 						<span class="pipe">|</span>
 						<a href="http://code.google.com/p/claslite/source/browse/web/client/claslite.html">Code</a>
