Select deforestation by default instead of disturbance

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -327,7 +327,7 @@
 								<script type="text/javascript">
 									document.write(
 										getForestChangeStaticPanel(
-											'deforestation', 'Deforestation'
+											'deforestation', 'Deforestation', true
 										),
 										getForestChangeStaticPanel(
 											'disturbance', 'Forest Disturbance'
