Add sidebar help section with placeholder text

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -384,11 +384,6 @@
 								Advanced
 							</div>
 							
-							<div class="section">
-								<img class="toggle-expand" src="images/toggle-expand.png" />
-								About
-							</div>
-							
 						</div>
 						
 						<!-- End Forest View Panel -->
@@ -402,6 +397,22 @@
 						</div>
 						
 						<!-- End Help Panel -->
+						
+						<!-- Begin Help Section -->
+						
+						<div id="help-section">
+							<div class="section">
+								<span class="help-hider hider">
+									<div class="inline-block sprite icon16 icon16-toggle-expand">
+									</div>
+									Help
+								</span>
+							</div>
+							<div id="help-content" class="help-content">
+							</div>
+						</div>
+						
+						<!-- End Help Section -->
 						
 					</div>
 				</div>
