Get sidebar help content working

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -408,7 +408,7 @@
 									Help
 								</span>
 							</div>
-							<div id="help-content" class="help-content">
+							<div id="help-content" class="help-content" style="display:none">
 							</div>
 						</div>
 						
