--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -58,6 +58,10 @@
 								<ul id="project-list" class="notranslate project-list combo-list">
 								</ul>
 								
+								<div style="margin:4px 0;">
+									<button type="submit" class="submit icon-button" id="project-delete-button" style=""><div class="inline-block sprite icon16 icon16-cross-baseline"></div>&nbsp;Delete Forever</button>
+								</div>
+								
 							</div>
 							
 							<div class="float-left">
