Add selector for download projections

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -297,6 +297,19 @@
 									</select>
 								</div>
 								
+								<div style="margin-bottom:16px;">
+									<label class="year-source-label" for="projection-select">Projection:</label>
+									<select id="projection-select">
+										<option value="EPSG:4326" selected="selected">WGS 84 - World Geodetic</option>
+										<option value="EPSG:3857">Web - Spherical Mercator</option>
+										<option value="EPSG:29101">SAD 69 - Brazil Polyconic</option>
+										<option value="EPSG:24891">PSAD 56 - Peru West</option>
+										<option value="EPSG:24892">PSAD 56 - Peru Central</option>
+										<option value="EPSG:24893">PSAD 56 - Peru East</option>
+										<option value=""></option>
+									</select>
+								</div>
+								
 								<div class="clear-left">
 								</div>
 								
